Cacti CHANGELOG

0.8.7h
-bug#0001403: Reapply Suggested Names does not work correctly for graphs and data sources not associated with Data Queries
-bug#0001568: Remove PHP 5.3 deprecated functions
-bug#0001584: Conncurrent changes to graph tree ordering can corrupt sort values
-bug#0001626: Symbol ($) does not appear in labels/gprint strings to rrdtool during graph generation
-bug#0001632: Script server treats quoted arguments with spaces incorrectly as multiple separate arguments
-bug#0001646: MySQL SSL connection support
-bug#0001660: Modifying data template values does not proprogate as expected	
-bug#0001678: Adding graphs to a device fails to add entries to poller_item if using the script server 
-bug#0001768: Perform consistency check on ds maximum vs. ds minimum
-bug#0001783: Graph Export export date is incorrect
-bug#0001812: Data template copying ignores some item templating
-bug#0001814: Command line device add script fails when SNMP default is disabled
-bug#0001815: One minute polling not working correctly
-bug#0001816: Cannot export graph data to CSV with IE 8
-bug#0001819: MySQL "TYPE=" command deprecated since MySQL 4.1 removed in MySQL 5.4.4 
-bug#0001826: Zoomed graph views should auto refresh
-bug#0001828: Reapply Suggested Name prompt as spelling problems
-bug#0001835: Graph edit page has more than one html form tag
-bug#0001847: Graph export API function has required argument not defined
-bug#0001851: Graph creation selector does not work with data query that has no associated graph templates
-bug#0001855: Improper formatting of data queries can result in SQL errors
-bug#0001862: Ping script does not process output of update ping utility
-bug#0001867: RRDtool Cacti fetch function does not work for some locales
-bug#0001876: PHP function strip_quotes causes HEX values to be truncated
-bug#0001880: Form validation error message does not highlight text area control
-bug#0001882: Cacti snmp_walk function fails if max_oids is an empty value